--- a/src/components/ControlFInanceSection/ControlFInanceList/ControlFinanceCard/style.module.scss
+++ b/src/components/ControlFInanceSection/ControlFInanceList/ControlFinanceCard/style.module.scss
@@ -1,19 +1,13 @@
-// .green {
-//   border-left: 1px solid green;
-// }
-
-// .grey {
-//   border-left: 1px solid grey;
-// }
-
 .ControlFinanceCard {
+  margin-top: 1rem;
   padding: 1.5rem;
   background-color: var(--grey-1);
   border-radius: 4px 0, 0, 4px;
   border-left: 4px solid;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 
   h3 {
     margin-bottom: 1rem;
@@ -21,6 +15,11 @@
 
   button {
     margin-top: 1rem;
+  }
+
+  @media (min-width: 1024px) {
+    justify-content: space-between;
+    flex-direction: row;
   }
 
   &.green {
