--- a/src/components/ControlFInanceSection/style.module.scss
+++ b/src/components/ControlFInanceSection/style.module.scss
@@ -1,3 +1,10 @@
-// .flexBox {
-//   display: flex;
-// }
+.flexBox {
+  @media (min-width: 1024px) {
+    padding: 2rem 0;
+    display: grid;
+    grid-template-areas:
+      "a c"
+      "b c";
+    gap: 1rem;
+  }
+}
