--- a/src/components/FinanceForm/style.module.scss
+++ b/src/components/FinanceForm/style.module.scss
@@ -3,6 +3,10 @@
   background-color: var(--grey-1);
   border: 1px solid rgba(0, 0, 0, 0.2);
 
+  @media (min-width: 900px) {
+    width: 22.1875rem;
+  }
+
   form {
     display: flex;
     flex-direction: column;
