--- a/src/components/FinanceForm/style.module.scss
+++ b/src/components/FinanceForm/style.module.scss
@@ -1,6 +1,6 @@
 .formbox {
   padding: 2rem;
-  background-color: var(--grey-1);
+  background-color: #ffff;
   border: 1px solid rgba(0, 0, 0, 0.2);
 
   @media (min-width: 900px) {
