--- a/src/components/ControlFInanceSection/ControlFInanceList/ControlFinanceCard/style.module.scss
+++ b/src/components/ControlFInanceSection/ControlFInanceList/ControlFinanceCard/style.module.scss
@@ -10,7 +10,6 @@
   align-items: flex-start;
 
   h3 {
-    margin-top: 0.4rem;
     margin-bottom: 1rem;
   }
 
@@ -21,6 +20,7 @@
   @media (min-width: 1024px) {
     justify-content: space-between;
     flex-direction: row;
+    align-items: center;
   }
 
   &.green {
